# treeloom

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  llms-full.txt  llms.txt  pyproject.toml
.claude/: docs-state.json
.claude/commands/: create-release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  conftest.py  test_build.py  test_memory.py  test_query.py  test_serialization.py  test_taint.py
docs/: README.md  cli-reference.md  getting-started.md  language-support.md  library-guide.md  sanicode-integration.md  taint-analysis.md
research/: cpg-landscape.md  retest-notes-v0.2.3.md  testing-notes-v0.2.1.md  vampi-analysis.md
retrospectives/2026-04-09_v0.6.0-backlog-clear/: RETRO.md
scripts/: release.sh  scaffold.sh
src/treeloom/: __init__.py
src/treeloom/analysis/: __init__.py  reachability.py  summary.py  taint.py
src/treeloom/cli/: _util.py  annotate_cmd.py  build.py  completions_cmd.py  config.py  diff_cmd.py  dot_cmd.py  edges_cmd.py  info.py  main.py  pattern_cmd.py  query.py  serve_cmd.py  subgraph_cmd.py  taint_cmd.py  viz_cmd.py  watch_cmd.py
src/treeloom/export/: __init__.py  dot.py  html.py  json.py
src/treeloom/graph/: __init__.py  backend.py  builder.py  cpg.py
src/treeloom/lang/: __init__.py  _scope.py  base.py  protocol.py  registry.py
src/treeloom/model/: __init__.py  edges.py  location.py  nodes.py
src/treeloom/models/: __init__.py  _loader.py  _registry.py
src/treeloom/overlay/: __init__.py  api.py
src/treeloom/query/: __init__.py  api.py  pattern.py
tests/: conftest.py
tests/analysis/: conftest.py  test_reachability.py  test_summary.py  test_taint.py
tests/export/: test_dot.py  test_html.py  test_json.py  test_overlay.py
tests/fixtures/c/: control_flow.c  cross_function_taint.c  data_flow.c  function_pointers.c  simple_function.c  struct_example.c
tests/fixtures/cpp/: control_flow.cpp  cross_function_taint.cpp  data_flow.cpp  functions.cpp  method_calls.cpp  nested_scopes.cpp  simple_class.cpp
tests/fixtures/go/: control_flow.go  cross_function_taint.go  data_flow.go  imports.go  method_calls.go  nested_scopes.go  simple_function.go  struct_methods.go
tests/fixtures/java/: ControlFlow.java  Interfaces.java  SimpleClass.java
tests/fixtures/javascript/: arrow_functions.js  class_with_methods.js  control_flow.js  cross_function_taint.js  data_flow.js  imports.js  method_calls.js  nested_scopes.js  simple_function.js
tests/fixtures/python/: augmented_assignment.py  chained_attribute.py  class_with_methods.py  control_flow.py  cross_function_taint.py  data_flow.py  field_sensitivity.py  function_calls.py  import_resolution_caller.py  import_resolution_lib.py  imports.py  method_return_flow.py  nested_scopes.py  self_method_calls.py  simple_function.py  string_formatting.py  type_annotations.py  type_inference.py
tests/fixtures/rust/: control_flow.rs  cross_function_taint.rs  data_flow.rs  method_calls.rs  nested_scopes.rs  (+2 more)
tests/graph/: test_backend.py  test_builder.py  test_cfg.py  test_cpg.py  test_incremental.py  test_interprocedural.py
tests/lang/: test_base.py  test_c.py  test_cpp.py  test_go.py  test_java.py  test_javascript.py  test_python.py  test_registry.py  test_rust.py  test_scope_stack.py  test_typescript.py
tests/model/: test_edges.py  test_location.py  test_nodes.py
tests/models/: test_loader.py
tests/query/: conftest.py  test_api.py  test_pattern.py
tests/test_cli/: test_annotate_cmd.py  test_build.py  test_completions_cmd.py  test_config.py  test_diff_cmd.py  test_dot_cmd.py  test_edges_cmd.py  test_info.py  test_json_errors.py  test_pattern_cmd.py  test_query.py  test_serve_cmd.py  test_subgraph_cmd.py  test_taint_cmd.py  test_viz_cmd.py  test_watch_cmd.py
tests/test_graph/: test_build_perf.py
(+19 files in other folders)
