[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treeloom"
version = "0.7.0"
description = "Language-agnostic Code Property Graph library — weave syntax trees into queryable, analyzable graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Will Jackson" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "networkx>=3.0",
    "tree-sitter>=0.23",
    "pyyaml>=6.0",
]

[project.scripts]
treeloom = "treeloom.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
languages = [
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-rust>=0.23",
]
bench = [
    "pytest-benchmark>=4.0",
    "psutil>=5.9",
]
all = ["treeloom[dev,languages,bench]"]

[tool.hatch.build.targets.wheel]
packages = ["src/treeloom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "benchmark: performance benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Shell completion scripts contain long lines that are part of the generated output
# and cannot be wrapped without corrupting the scripts.
"src/treeloom/cli/completions_cmd.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
